--- a/CarRentalSystem/CarRentalSystem.Domain.csproj
+++ b/CarRentalSystem/CarRentalSystem.Domain.csproj
@@ -12,6 +12,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
+	  <PackageReference Include="Scrutor" Version="3.2.1" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectCapability Include="DynamicFileNesting" />
 	</ItemGroup>
 	
